--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,13 @@
 ---
 name: CI
-on: [ push ]
+'on':
+  pull_request:
+    push:
+      branches:
+        - main
 
 jobs:
+
   test:
     name: Molecule
     runs-on: ubuntu-latest
@@ -21,7 +26,11 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install molecule docker yamllint ansible-lint
+        run: pip3 install molecule[docker] docker yamllint ansible-lint
 
       - name: Run Molecule tests.
         run: molecule test
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_DISTRO: ${{ matrix.distro }}
